Minor visual changes

--- a/Views/Windows/MainWindow.xaml
+++ b/Views/Windows/MainWindow.xaml
@@ -3,7 +3,6 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:BudgetMVVM.Views.Windows"
         xmlns:vm="clr-namespace:BudgetMVVM.ViewModels"
         xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes" 
         xmlns:i="http://schemas.microsoft.com/xaml/behaviors"
@@ -15,7 +14,7 @@
         Background="{DynamicResource MaterialDesignPaper}"
         FontFamily="{DynamicResource MaterialDesignFont}"
         mc:Ignorable="d"
-        Title="MainWindow" Height="500" Width="1000">
+        Title="Budget Planner" Height="500" Width="1000">
 
     <Window.DataContext>
         <vm:MainWindowVM/>
