Add/Edit operation amount input fix (now numeric allowed)

--- a/Views/EditOperationView.xaml
+++ b/Views/EditOperationView.xaml
@@ -63,6 +63,7 @@
                  materialDesign:HintAssist.Hint="Amount"
                  Style="{StaticResource MaterialDesignFloatingHintTextBox}"
                  VerticalAlignment="Center" 
+                 PreviewTextInput="AmountTb_OnPreviewTextInput"
                  Text="{Binding Amount}"/>
         <DatePicker Grid.Column="1" Grid.Row="3"
                     Margin="0 5 0 0"
